# open-chess-analyzer

./: .gitignore  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  GITHUB_PUBLISH.md  LICENSE  OPENAI_APPLICATION_DRAFT.md  README.md  ROADMAP.md  pyproject.toml
.github/workflows/: ci.yml
docs/: architecture.md
examples/: annotated-miniature.pgn  draw-with-comments.pgn  missing-headers.pgn  sample.pgn
src/open_chess_analyzer/: __init__.py  __main__.py  cli.py  pgn.py
tests/: test_pgn.py
