[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "open-chess-analyzer"
version = "0.1.0"
description = "Open-source PGN chess game analyzer and review report generator"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [{name = "Open Chess Analyzer contributors"}]
keywords = ["chess", "pgn", "analysis", "stockfish", "uci"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Education",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Games/Entertainment :: Board Games",
]

[project.scripts]
open-chess-analyzer = "open_chess_analyzer.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
